5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1845_2221.log
== TEST (2019-06-26 16:42:07) 
-- CODE:
matriz= [[0, 0, 0, 0],[0, 0, 0, 0],[0, 0, 0, 0]]
print(matriz)
-- OUTPUT:
[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:50:26) 
-- CODE:
from numpy.linalg import*
matriz= array([[0, 0, 0, 0],[0, 0, 0, 0],[0, 0, 0, 0]])
 for l in range
print(matriz)
-- ERROR:
File "XXXX", line 3
    for l in range
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:50:33) 
-- CODE:
from numpy.linalg import*
matriz= array([[0, 0, 0, 0],[0, 0, 0, 0],[0, 0, 0, 0]])
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:50:52) 
-- CODE:
from numpy.linalg import*
matriz= array(eval([[0, 0, 0, 0],[0, 0, 0, 0],[0, 0, 0, 0]]))
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:51:05) 
-- CODE:
from numpy.linalg import*
matriz= [[0, 0, 0, 0],[0, 0, 0, 0],[0, 0, 0, 0]]
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
